manifests/ingress/webuis.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  ingressClassName: cilium
  rules:
    - host: longhorn.192.168.2.100.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: cilium
  rules:
    - host: grafana.192.168.2.100.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: victoria-metrics-k8s-stack-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victoriametrics
  namespace: monitoring
spec:
  ingressClassName: cilium
  rules:
    - host: vm.192.168.2.100.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmsingle-victoria-metrics-k8s-stack
                port:
                  number: 8428
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victorialogs
  namespace: monitoring
spec:
  ingressClassName: cilium
  rules:
    - host: vl.192.168.2.100.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vlsingle-victoria-metrics-k8s-stack
                port:
                  number: 9428
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  ingressClassName: cilium
  rules:
    - host: alertmanager.192.168.2.100.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmalertmanager-victoria-metrics-k8s-stack
                port:
                  number: 9093
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    ingress.cilium.io/tls-passthrough: "enabled"
spec:
  ingressClassName: cilium
  rules:
    - host: argocd.192.168.2.100.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
spec:
  ingressClassName: cilium
  rules:
    - host: keycloak.192.168.2.100.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
